--- a/_config.yml
+++ b/_config.yml
@@ -6,13 +6,13 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: yuntiandeng.com
-email: yuntian@uwaterloo.ca
+title: richrastogi.github.io
+email: rr568@cornell.edu
 description:  # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://yuntiandeng.com/" # the base hostname & protocol for your site
-twitter_username: yuntiandeng
-github_username: da03
+url: "http://richarastogi.github.io/" # the base hostname & protocol for your site
+twitter_username: Rich_Rast
+github_username: RichRast
 
 # Build settings
 markdown: kramdown
