--- a/_data/projects.yaml
+++ b/_data/projects.yaml
@@ -1,10 +1,11 @@
 projects:
-    - link: "https://github.com/RichRast/Ge3Net" 
+    - code: "https://github.com/RichRast/Ge3Net" 
       title: "Ge3Net: Inferring Continuous Population Structure Coordinates Along the Genome"
       authors: "Rastogi, Richa and Kumar, Arvind S. and Hilmarsson, Helgi and Bustamante, Carlos D. and Montserrat, Daniel Mas and Ioannidis, Alexander G."
       abstract: "This work targets the disparities in genomic medicine that are emerging between various worldwide populations.
       By annotating ancestry along the genome accurately, and with simple to use coordinates, we hope to enable genetic researchers to incorporate ancestry-specific genetic effects into their future models with ease.
       This could extend the benefits of such research and models to more diverse cohorts." 
       image: /images/Ge3Net_simulated.jpg
+      pdf: https://github.com/RichRast/Ge3Net/blob/main/Ge3Net.pdf
     
        
