--- a/_data/projects.yaml
+++ b/_data/projects.yaml
@@ -7,5 +7,6 @@ projects:
       This could extend the benefits of such research and models to more diverse cohorts." 
       image: /images/Ge3Net_simulated.jpg
       pdf: https://github.com/RichRast/Ge3Net/blob/main/Ge3Net.pdf
+      link: https://github.com/RichRast/Ge3Net
     
        
