--- a/_data/workingpapers.yaml
+++ b/_data/workingpapers.yaml
@@ -1,6 +1,6 @@
 papers: 
     - title: "Predicting downstream outcomes versus specialist labels"
-      authors: Richa Rastogi, Michela Meister, Ziad Obermeyer, Jon Kleinberg, Pang Wei Koh, and Emma Pierson
+      authors: Richa Rastogi, Michela Meister, Ziad Obermeyer, Jon Kleinberg, Pang Wei Koh, Emma Pierson
       # pdf: 
       # code: 
       # image: 
