--- a/_data/papers.yaml
+++ b/_data/papers.yaml
@@ -2,7 +2,7 @@ papers:
     - title: "Fair Ranking under Disparate Uncertainty"
       authors: Richa Rastogi, Thorsten Joachims
       pdf: https://arxiv.org/abs/2309.01610
-      # code: https://github.com/da03/markup2im/blob/main/README.md
+      code: https://github.com/RichRast/Fairness_in_Ranking_under_Disparate_Uncertainty
       image: /images/posterior.jpg
       conference: "<b> Spotlight (Oral) </b> at UAI Workshop on Epistemic in AI, 2023"
     - title: "Semi-Parametric Inducing Point Networks and Neural Processes"
