--- a/_data/workingpapers.yaml
+++ b/_data/workingpapers.yaml
@@ -2,7 +2,7 @@ papers:
     - title: "Predicting downstream outcomes versus specialist labels"
       authors: Richa Rastogi, Michela Meister, Ziad Obermeyer, Jon Kleinberg, Pang Wei Koh, Emma Pierson
       # pdf: 
-      # code: 
+      code: https://github.com/RichRast/Predicting_downstream_outcomes_vs_specialist_labels
       # image: 
       conference: Under review, 2023
 
