--- a/_data/papers.yaml
+++ b/_data/papers.yaml
@@ -4,7 +4,7 @@ papers:
       pdf: https://arxiv.org/abs/2309.01610
       code: https://github.com/RichRast/Fairness_in_Ranking_under_Disparate_Uncertainty
       image: /images/posterior.jpg
-      conference: "<b> Spotlight (Oral) </b> at UAI Workshop on Epistemic in AI, 2023"
+      conference: "<b> Spotlight (Oral) </b> at UAI Workshop on Epistemic AI, 2023"
     - title: "Semi-Parametric Inducing Point Networks and Neural Processes"
       authors: Richa Rastogi, Yair Schiff, Alon Hacohen, Zhaozhi Li, Ian Lee, Yuntian Deng, Mert R Sabuncu, Volodymyr Kuleshov
       pdf: https://openreview.net/pdf?id=FE99-fDrWd5
