--- a/_data/papers.yaml
+++ b/_data/papers.yaml
@@ -12,6 +12,6 @@ papers:
       pdf: https://openreview.net/pdf?id=FE99-fDrWd5
       code: https://github.com/RichRast/SPIN
       image: /images/SPIN_arch.png
-      conference: ICLR 2023
+      conference: International Conference on Learning Representations (ICLR'23)
       bibtex: 
    
