--- a/_data/papers.yaml
+++ b/_data/papers.yaml
@@ -8,7 +8,7 @@ papers:
       conference: "ACM Conference on on Equity and Access in Algorithms, Mechanisms, and Optimization (EAAMO'24), ICML Workshop on Humans, Algorithmic Decision-Making and Society, 2024, <b> Spotlight (Oral) </b> at UAI Workshop on Epistemic AI, 2023"
       bibtex: 
     - title: "Semi-Parametric Inducing Point Networks and Neural Processes"
-      authors: <b> Richa Rastogi <\b>, Yair Schiff, Alon Hacohen, Zhaozhi Li, Ian Lee, Yuntian Deng, Mert R Sabuncu, Volodymyr Kuleshov
+      authors: <b> Richa Rastogi </b>, Yair Schiff, Alon Hacohen, Zhaozhi Li, Ian Lee, Yuntian Deng, Mert R Sabuncu, Volodymyr Kuleshov
       pdf: https://openreview.net/pdf?id=FE99-fDrWd5
       code: https://github.com/RichRast/SPIN
       image: /images/SPIN_arch.png
