--- a/_data/papers.yaml
+++ b/_data/papers.yaml
@@ -17,23 +17,22 @@ papers:
     image: /images/posterior.jpg
     poster: /images/Poster_FRUDU.png
     conference: "ACM Conference on on Equity and Access in Algorithms, Mechanisms, and Optimization (EAAMO'24), <b> Spotlight (Oral) </b> at UAI Workshop on Epistemic AI, 2023"
-    bibtex: @inproceedings{10.1145/3689904.3694703,
-    author = {Rastogi, Richa and Joachims, Thorsten},
-    title = {Fairness in Ranking under Disparate Uncertainty},
-    year = {2024},
-    isbn = {9798400712227},
-    publisher = {Association for Computing Machinery},
-    address = {New York, NY, USA},
-    url = {https://doi.org/10.1145/3689904.3694703},
-    doi = {10.1145/3689904.3694703},
-    abstract = {Ranking is a ubiquitous method for focusing the attention of human evaluators on a manageable subset of options. Its use as part of human decision-making processes ranges from surfacing potentially relevant products on an e-commerce site to prioritizing college applications for human review. While ranking can make human evaluation more effective by focusing attention on the most promising options, we argue that it can introduce unfairness if the uncertainty of the underlying relevance model differs between groups of options. Unfortunately, such disparity in uncertainty appears widespread, often to the detriment of minority groups for which relevance estimates can have higher uncertainty due to a lack of data or appropriate features. To address this fairness issue, we propose Equal-Opportunity Ranking (EOR) as a new fairness criterion for ranking and show that it corresponds to a group-wise fair lottery among the relevant options even in the presence of disparate uncertainty. EOR optimizes for an even cost burden on all groups, unlike the conventional Probability Ranking Principle, and is fundamentally different from existing notions of fairness in rankings, such as demographic parity and proportional Rooney rule constraints that are motivated by proportional representation relative to group size. To make EOR ranking practical, we present an efficient algorithm for computing it in time O(nlog (n)) and prove its close approximation guarantee to the globally optimal solution. In a comprehensive empirical evaluation on synthetic data, a US Census dataset, and a real-world audit of Amazon search queries, we find that the algorithm reliably guarantees EOR fairness while providing effective rankings.},
-    booktitle = {Proceedings of the 4th ACM Conference on Equity and Access in Algorithms, Mechanisms, and Optimization},
-    articleno = {5},
-    numpages = {31},
-    keywords = {cost of opportunity, disparate uncertainty, fairness, ranking},
-    location = {San Luis Potosi, Mexico},
-    series = {EAAMO '24}
-    }
+    bibtex: @inproceedings{ 10.1145/3689904.3694703,
+            author = {Rastogi, Richa and Joachims, Thorsten},
+            title = {Fairness in Ranking under Disparate Uncertainty},
+            year = {2024},
+            isbn = {9798400712227},
+            publisher = {Association for Computing Machinery},
+            address = {New York, NY, USA},
+            url = {https://doi.org/10.1145/3689904.3694703},
+            doi = {10.1145/3689904.3694703},
+            abstract = {Ranking is a ubiquitous method for focusing the attention of human evaluators on a manageable subset of options. Its use as part of human decision-making processes ranges from surfacing potentially relevant products on an e-commerce site to prioritizing college applications for human review. While ranking can make human evaluation more effective by focusing attention on the most promising options, we argue that it can introduce unfairness if the uncertainty of the underlying relevance model differs between groups of options. Unfortunately, such disparity in uncertainty appears widespread, often to the detriment of minority groups for which relevance estimates can have higher uncertainty due to a lack of data or appropriate features. To address this fairness issue, we propose Equal-Opportunity Ranking (EOR) as a new fairness criterion for ranking and show that it corresponds to a group-wise fair lottery among the relevant options even in the presence of disparate uncertainty. EOR optimizes for an even cost burden on all groups, unlike the conventional Probability Ranking Principle, and is fundamentally different from existing notions of fairness in rankings, such as demographic parity and proportional Rooney rule constraints that are motivated by proportional representation relative to group size. To make EOR ranking practical, we present an efficient algorithm for computing it in time O(nlog (n)) and prove its close approximation guarantee to the globally optimal solution. In a comprehensive empirical evaluation on synthetic data, a US Census dataset, and a real-world audit of Amazon search queries, we find that the algorithm reliably guarantees EOR fairness while providing effective rankings.},
+            booktitle = {Proceedings of the 4th ACM Conference on Equity and Access in Algorithms, Mechanisms, and Optimization},
+            articleno = {5},
+            numpages = {31},
+            keywords = {cost of opportunity, disparate uncertainty, fairness, ranking},
+            location = {San Luis Potosi, Mexico},
+            series = {EAAMO '24}}
     slides: https://speakerdeck.com/richrast/fairness-in-ranking-under-disparate-uncertainty
 
   - title: "Semi-Parametric Inducing Point Networks and Neural Processes"
@@ -49,8 +48,7 @@ papers:
     author={Richa Rastogi and Yair Schiff and Alon Hacohen and Zhaozhi Li and Ian Lee and Yuntian Deng and Mert R. Sabuncu and Volodymyr Kuleshov},
     booktitle={The Eleventh International Conference on Learning Representations },
     year={2023},
-    url={https://openreview.net/forum?id=FE99-fDrWd5}
-    }
+    url={https://openreview.net/forum?id=FE99-fDrWd5}}
     slides: https://yair-schiff.github.io/assets/pub_content/SPIN_ICLR_2023_slides.pdf
 
 
