--- a/_data/papers.yaml
+++ b/_data/papers.yaml
@@ -17,7 +17,8 @@ papers:
     image: /images/posterior.jpg
     poster: /images/Poster_FRUDU.png
     conference: "ACM Conference on on Equity and Access in Algorithms, Mechanisms, and Optimization (EAAMO'24), <b> Spotlight (Oral) </b> at UAI Workshop on Epistemic AI, 2023"
-    bibtex: @inproceedings{ 10.1145/3689904.3694703,
+    bibtex: |
+    @inproceedings{ 10.1145/3689904.3694703,
             author = {Rastogi, Richa and Joachims, Thorsten},
             title = {Fairness in Ranking under Disparate Uncertainty},
             year = {2024},
@@ -32,7 +33,8 @@ papers:
             numpages = {31},
             keywords = {cost of opportunity, disparate uncertainty, fairness, ranking},
             location = {San Luis Potosi, Mexico},
-            series = {EAAMO '24}}
+            series = {EAAMO '24}
+            }
     slides: https://speakerdeck.com/richrast/fairness-in-ranking-under-disparate-uncertainty
 
   - title: "Semi-Parametric Inducing Point Networks and Neural Processes"
@@ -42,15 +44,16 @@ papers:
     code: https://github.com/RichRast/SPIN
     image: /images/SPIN_arch.png
     conference: International Conference on Learning Representations (ICLR'23)
-    bibtex: @inproceedings{
-    rastogi2023semiparametric,
-    title={Semi-Parametric Inducing Point Networks and Neural Processes},
-    author={Richa Rastogi and Yair Schiff and Alon Hacohen and Zhaozhi Li and Ian Lee and Yuntian Deng and Mert R. Sabuncu and Volodymyr Kuleshov},
-    booktitle={The Eleventh International Conference on Learning Representations },
-    year={2023},
-    url={https://openreview.net/forum?id=FE99-fDrWd5}}
+    bibtex: |
+      @inproceedings{
+      rastogi2023semiparametric,
+      title={Semi-Parametric Inducing Point Networks and Neural Processes},
+      author={Richa Rastogi and Yair Schiff and Alon Hacohen and Zhaozhi Li and Ian Lee and Yuntian Deng and Mert R. Sabuncu and Volodymyr Kuleshov},
+      booktitle={The Eleventh International Conference on Learning Representations },
+      year={2023},
+      url={https://openreview.net/forum?id=FE99-fDrWd5}
+      }
     slides: https://yair-schiff.github.io/assets/pub_content/SPIN_ICLR_2023_slides.pdf
-
 
   - title: "System and Method for placing labels on moving objects"
     authors: Daniel Muething, <b> Richa Rastogi </b>, Keith C Tate, Anand H Doshi, John K Robinson, Mahmoud Abugharbieh
