--- a/_data/papers.yaml
+++ b/_data/papers.yaml
@@ -58,6 +58,6 @@ papers:
     pdf: https://patents.google.com/patent/US11104469B1/en?oq=US11104469B1
     tldr: Learning closed loop dynamics for accurately positioning labels on moving packages. 
     image: 
-    conference: USPTO Patent on behalf of Amazon
+    conference: USPTO Patent on behalf of Amazon, 2021
     bibtex: 
    
