--- a/_data/papers.yaml
+++ b/_data/papers.yaml
@@ -2,7 +2,7 @@ papers:
   - title: "MultiScale Contextual Bandits for Long-term Objectives"
     authors: <b> Richa Rastogi </b>, Yuta Saito, Thorsten Joachims
     pdf: 
-    tldr: MultiScale Policy Learning to contextually reconcile the disconnect in the timescales of short-term interventions (e.g., rankings) and the long-term feedback (e.g., user retention). Our method learns interventions and policies at multiple interdependent timescales in various settings ranging from recommender systems to LLMs.
+    tldr: MultiScale Policy Learning to contextually reconcile the disconnect in the timescales of short-term interventions (e.g., rankings, token feedback) and the long-term feedback (e.g., user retention, sentence feedback). Our method learns interventions and policies at multiple interdependent timescales in various settings ranging from recommender systems to LLMs.
     code: 
     image: /images/MSBL_2.png
     poster: 
