--- a/_data/papers.yaml
+++ b/_data/papers.yaml
@@ -1,12 +1,12 @@
 papers: 
   - title: "MultiScale Contextual Bandits for Long-term Objectives"
     authors: <b> Richa Rastogi </b>, Yuta Saito, Thorsten Joachims
-    pdf: 
+    pdf: https://arxiv.org/abs/2503.17674
     tldr: MultiScale Policy Learning to contextually reconcile the disconnect in the timescales of short-term interventions (e.g., rankings, token feedback) and the long-term feedback (e.g., user retention, sentence feedback). Our method learns interventions and policies at multiple interdependent timescales in various settings ranging from recommender systems to LLMs.
     code: 
     image: /images/MSBL_2.png
     poster: 
-    conference: 
+    conference: Preprint, 2025
     bibtex: 
 
   - title: "Fairness in Ranking under Disparate Uncertainty"
