--- a/_data/papers.yaml
+++ b/_data/papers.yaml
@@ -6,7 +6,7 @@ papers:
     code: 
     image: /images/MSBL_2.png
     poster: 
-    conference: Neural Information Processing Systems (NeuIPS), 2025
+    conference: Neural Information Processing Systems (NeurIPS), 2025
     bibtex: 
 
   - title: "Fairness in Ranking under Disparate Uncertainty"
