--- a/_data/papers.yaml
+++ b/_data/papers.yaml
@@ -16,7 +16,7 @@ papers:
     code: https://github.com/RichRast/Fairness_in_Ranking_under_Disparate_Uncertainty
     image: /images/posterior.jpg
     poster: /images/Poster_FRUDU.png
-    conference: "ACM Conference on on Equity and Access in Algorithms, Mechanisms, and Optimization (EAAMO'24), <b> Spotlight (Oral) </b> at UAI Workshop, 2023"
+    conference: "ACM Conference on on Equity and Access in Algorithms, Mechanisms, and Optimization (EAAMO),2024 <b> Spotlight (Oral) </b> at UAI Workshop, 2023"
     bibtex: >
       @inproceedings{ 10.1145/3689904.3694703,
             author = {Rastogi, Richa and Joachims, Thorsten},
@@ -43,7 +43,7 @@ papers:
     tldr: We introduce Semi-Parametric Inducing Point Networks (SPIN), a general-purpose architecture that can query the training set at inference time in a compute-efficient manner.
     code: https://github.com/RichRast/SPIN
     image: /images/SPIN_arch.png
-    conference: International Conference on Learning Representations (ICLR'23)
+    conference: International Conference on Learning Representations (ICLR), 2023
     bibtex: >
       @inproceedings{
       rastogi2023semiparametric,
