--- a/_data/papers.yaml
+++ b/_data/papers.yaml
@@ -6,7 +6,7 @@ papers:
     code: 
     image: /images/MSBL_2.png
     poster: 
-    conference: Neural Information Processing Systems (NeurIPS), 2025
+    conference: Neural Information Processing Systems <b> (NeurIPS), 2025 </b>
     bibtex: 
 
   - title: "Fairness in Ranking under Disparate Uncertainty"
@@ -16,7 +16,7 @@ papers:
     code: https://github.com/RichRast/Fairness_in_Ranking_under_Disparate_Uncertainty
     image: /images/posterior.jpg
     poster: /images/Poster_FRUDU.png
-    conference: "ACM Conference on on Equity and Access in Algorithms, Mechanisms, and Optimization (EAAMO), 2024 <b> Spotlight (Oral) </b> at UAI Workshop, 2023"
+    conference: "ACM Conference on on Equity and Access in Algorithms, Mechanisms, and Optimization <b> (EAAMO) 2024 </b>, UAI Workshop, 2023 <b> Spotlight (Oral) </b>"
     bibtex: >
       @inproceedings{ 10.1145/3689904.3694703,
             author = {Rastogi, Richa and Joachims, Thorsten},
@@ -43,7 +43,7 @@ papers:
     tldr: We introduce Semi-Parametric Inducing Point Networks (SPIN), a general-purpose architecture that can query the training set at inference time in a compute-efficient manner.
     code: https://github.com/RichRast/SPIN
     image: /images/SPIN_arch.png
-    conference: International Conference on Learning Representations (ICLR), 2023
+    conference: International Conference on Learning Representations <b> (ICLR), 2023 </b>
     bibtex: >
       @inproceedings{
       rastogi2023semiparametric,
