--- a/_data/projects.yaml
+++ b/_data/projects.yaml
@@ -1,11 +1,12 @@
 projects:
     - code: "https://github.com/RichRast/Ge3Net" 
       title: "Ge3Net: Inferring Continuous Population Structure Coordinates Along the Genome"
-      authors: "Rastogi, Richa and Kumar, Arvind S. and Hilmarsson, Helgi and Bustamante, Carlos D. and Montserrat, Daniel Mas and Ioannidis, Alexander G."
+      authors: <b> Richa Rastogi </b>, Arvind S. Kumar, Helgi Hilmarsson, Carlos D. Bustamante, Daniel Mas Montserrat, Alexander G. Ioannidis
       abstract: "This work targets the disparities in genomic medicine that are emerging between various worldwide populations.
       We propose a deep learning architecture to infer local ancestry along the genome with simple to use coordinates.
       This could extend the benefits of such research and models to more diverse cohorts." 
       image: /images/Ge3Net_simulated.jpg
+      conference: NeurIPS workshop on Learning Meaningful Representations of Life (LMRL), 2020
       pdf: https://github.com/RichRast/Ge3Net/blob/main/Ge3Net.pdf
       link: https://github.com/RichRast/Ge3Net
     
